Polepszenie jakości kodu JavaScript

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body>
     <div id="content">
         <h1>Witaj w aplikacji pogodowej!</h1>
-        <h2>Dzisiaj w Katowicach jest:</h2>
+        <p>Podaj miasto:</p>
+        <input type="text" id="pole">
+        <input type="submit" value="Sprawdź!" id="btn">
         <div id="pogoda">
             <p id="temp"></p>
             <p id="wiatr"></p>
             <p id="cisnienie"></p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
