--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div id="content">
-        <h1>Witaj w aplikacji pogodowej!</h1>
-        <p>Podaj miasto:</p>
-        <input type="text" id="pole">
-        <input type="submit" value="Sprawdź!" id="btn">
+        <div id="form">
+            <h1>Witaj w aplikacji pogodowej!</h1>
+            <p>Podaj miasto:</p>
+            <input type="text" id="pole">
+            <input type="submit" value="Sprawdź!" id="btn">
+        </div>
         <div id="pogoda">
         </div>
     </div>
