--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
         <div id="pogoda">
         </div>
     </div>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
